--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -57,7 +57,7 @@
 #es-LEGO li, #es-LEGO p {
   font-family: cera_proregular, "Trebutchet MS", Arial, Helvetica, sans-serif;
 }
-#es-LEGO .margin {
+#es-LEGO ._margin {
   margin: 16px;
 }
 #es-LEGO .es-centered {
