more es_centered in css

--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -79,7 +79,7 @@
   width: 10ch;
 }
 @media screen and (min-width: 600px) {
-  #es-LEGO .es-centered h1 {
+  #es-LEGO .es_centered h1 {
     background-color: unset;
     border: unset;
   }
@@ -223,7 +223,7 @@
   max-width: 1544px;
   margin: auto;
 }
-#es-LEGO .es-centered img {
+#es-LEGO .es_centered img {
   width: 100%;
 }
 #es-LEGO .es-figcaption-red {
@@ -390,7 +390,7 @@
   background-repeat: no-repeat;
   padding-block: 2.5rem;
 }
-#es-LEGO #es-footer .es-centered {
+#es-LEGO #es-footer .es_centered {
   display: grid;
   place-items: center;
   max-width: 80%;
@@ -399,20 +399,20 @@
   background-color: white;
   border: 3px solid black;
 }
-#es-LEGO #es-footer .es-centered h3 {
+#es-LEGO #es-footer .es_centered h3 {
   text-align: center;
   font-size: clamp(1.625rem, 1.2655rem + 1.7974vw, 3rem);
   width: 14ch;
   margin-bottom: 1rem;
 }
-#es-LEGO #es-footer .es-centered ul {
+#es-LEGO #es-footer .es_centered ul {
   font-size: 16px;
   text-align: center;
 }
-#es-LEGO #es-footer .es-centered ul li:nth-last-of-type(2) {
+#es-LEGO #es-footer .es_centered ul li:nth-last-of-type(2) {
   margin-top: 1rem;
 }
-#es-LEGO #es-footer .es-centered ul li {
+#es-LEGO #es-footer .es_centered ul li {
   margin-block: 2px;
 }
 @media screen and (min-width: 600px) {
