--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -259,6 +259,8 @@
 }
 #es-LEGO #es-categories-age h3 {
   color: white;
+  letter-spacing: 2px;
+  font-size: clamp(1.375rem, 1.2846rem + 0.4823vw, 1.75rem);
 }
 #es-LEGO #es-categories-age figcaption {
   height: 3rem;
@@ -280,6 +282,9 @@
 }
 #es-LEGO #es-categories-age figure:nth-of-type(6) figcaption {
   background: linear-gradient(90deg, #000000 50%, #c7c1c0 50%);
+}
+#es-LEGO #es-categories-theme h3 {
+  font-size: clamp(1.375rem, 1.2846rem + 0.4823vw, 1.75rem);
 }
 #es-LEGO #es-categories-theme .es-grid-container-card:nth-of-type(1) .es-grid-container-card-head-L {
   background-color: #006fba;
