--- a/assets/styles/styles.scss
+++ b/assets/styles/styles.scss
@@ -341,6 +341,9 @@ $es-black-200: #c7c1c0;
 #es-categories-age {
   h3 {
     color: white;
+    letter-spacing: 2px;
+    font-size: clamp(1.375rem, 1.2846rem + 0.4823vw, 1.75rem);
+    // font-size: clamp(1.125rem, 1.0044rem + 0.6431vw, 1.625rem);
   }
   figcaption {
     height: 3rem;
@@ -382,6 +385,9 @@ $es-black-200: #c7c1c0;
 }
 
 #es-categories-theme {
+  h3 {
+    font-size: clamp(1.375rem, 1.2846rem + 0.4823vw, 1.75rem);
+  }
   .es-grid-container-card:nth-of-type(1) {
     .es-grid-container-card-head-L {
       background-color: #006fba;
